deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-test-deploy
  labels:
    app: test-express
spec:
  replicas: 4
  selector:
    matchLabels:
      app: test-express
  template:
    metadata:
      labels:
        app: test-express
    spec:
      #hostNetwork: true
      containers:
      - name: test-express
        image: 192.168.77.150:8044/library/test-express:latest
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: express-test-service
spec:
  selector:
    app: test-express
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 3000
